# diglet-1

./: CMakeLists.txt  README.md  prj.conf  west.yml
boards/: app.overlay
include/: 2sep.h  basic.h  dc_control.h  stepper_control.h
src/: 1.c  CMakeLists.txt  dc_control.c  main.c  stepper_control.c
